# gradle-bodyguard

./: .editorconfig  .flake8  .gitignore  .mergify.yml  CHANGELOG.md  Makefile  README.md  pyproject.toml
.github/workflows/: main.yml  publish.yml
gradle_bodyguard/: __init__.py  app.py  cli_parser.py  constants.py  coordinates_translator.py  dependencies_slicer.py  gradle_runner.py  gradle_scanner.py  gradlew_locator.py  ossindex_fetcher.py  package_coordinates.py  report_generator.py  runner.py  security_reporter.py  vulnerabilities_matcher.py
gradle_bodyguard/utils/: cli_colorizer.py  dependencies_slicer.py  logging.py
tests/: fakes.py  test_app.py  test_dependencies_slicer.py  test_gradle_bodyguard.py  test_gradle_scanner.py  test_ossindex_fetcher.py  test_report_generator.py  test_vulnerabilities_matcher.py
tests/fixtures/plaid@e703957b/: build.gradle
tests/fixtures/rxjava@d3dd133c/src/main/java/io/reactivex/rxjava3/disposables/: ActionDisposable.java
tests/fixtures/rxjava@d3dd133c/src/main/java/io/reactivex/rxjava3/internal/operators/completable/: CompletableToObservable.java
tests/fixtures/rxjava@d3dd133c/src/main/java/io/reactivex/rxjava3/internal/operators/maybe/: MaybeFlatMapNotification.java  (+3 more)
tests/fixtures/rxjava@d3dd133c/src/test/java/io/reactivex/rxjava3/internal/jdk8/: FlowableFromStreamTest.java
tests/fixtures/rxjava@d3dd133c/src/test/java/io/reactivex/rxjava3/internal/schedulers/: ScheduledDirectPeriodicTaskTest.java
tests/fixtures/rxjava@d3dd133c/src/test/java/io/reactivex/rxjava3/parallel/: ParallelMapTryTest.java
(+3 files in other folders)
