[tool.poetry]
name = "gradle-bodyguard"
version = "0.1.0"
description = ""
authors = ["Ubiratan Soares <ubiratan.f.soares@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.23.0"
pytest-httpserver = "^0.3.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
main = "gradle_bodyguard:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
